[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = "0.10.1"
solana-program-log = "1.1.0"

[dev-dependencies]
mollusk-svm = "0.10.0"
solana-instruction = "3.1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
